test/corpus/inline-comments.txt
; NOTE: Due to the known limitation documented in KNOWN_ISSUES.md,
; inline comments after values are parsed as part of the value itself.
; These tests document the current behavior, not the ideal behavior.

==================
inline comment after value
==================
KEY=value # this is a comment
---
(source_file
  (variable
    name: (identifier)
    value: (raw_value)))

==================
inline comment with spacing
==================
KEY=value   # comment with spacing
---
(source_file
  (variable
    name: (identifier)
    value: (raw_value)))

==================
inline comment after string
==================
KEY="quoted value" # comment after string
---
(source_file
  (variable
    name: (identifier)
    value: (string_double))
  (comment))

==================
inline comment after empty value
==================
EMPTY= # empty value
---
(source_file
  (variable
    name: (identifier))
  (comment))

==================
multiple variables with inline comments
==================
KEY1=value1 # first comment
KEY2=value2 # second comment
---
(source_file
  (variable
    name: (identifier)
    value: (raw_value))
  (variable
    name: (identifier)
    value: (raw_value)))